# robotics-foundations

./: AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  PLUG_AND_PLAY.md  README.md
memory/: JOURNAL.md
src/: lib.rs
src/agent/: mod.rs  spatial_agent.rs
src/collision/: bounding.rs  mod.rs
src/control/: mod.rs  pid.rs
src/kinematics/: dh.rs  forward.rs  inverse.rs  jacobian.rs  mod.rs
src/path_planning/: astar.rs  mod.rs  potential_field.rs  rrt.rs
src/sensor/: mod.rs  odometry.rs  range.rs
src/transforms/: homogeneous.rs  mod.rs  quaternion.rs  rotation.rs
tests/: integration_tests.rs
