[package]
name = "robotics-foundations"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/robotics-foundations"
description = "Robotics foundations in Rust — kinematics, dynamics, path planning, sensor models, control theory"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[lib]
name = "robotics_foundations"
path = "src/lib.rs"
